// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextInput default 1`] = `
<div
  class="text-input"
>
  <label
    class="text-input__label"
  >
    Default
  </label>
   
  <input
    class="text-input__control"
    label="Default"
  />
</div>
`;

exports[`Storyshots TextInput disabled 1`] = `
<div
  class="text-input"
>
  <label
    class="text-input__label"
  >
    Disabled
  </label>
   
  <input
    class="text-input__control"
    disabled="disabled"
    label="Disabled"
  />
</div>
`;

exports[`Storyshots TextInput readonly 1`] = `
<div
  class="text-input"
>
  <label
    class="text-input__label"
  >
    Readonly
  </label>
   
  <input
    class="text-input__control"
    label="Readonly"
    readonly="readonly"
  />
</div>
`;

exports[`Storyshots TextInput with blur handler 1`] = `
<div
  class="text-input"
>
  <label
    class="text-input__label"
  >
    With Blur Handler
  </label>
   
  <input
    class="text-input__control"
    label="With Blur Handler"
  />
</div>
`;

exports[`Storyshots TextInput with change handler 1`] = `
<div
  class="text-input"
>
  <label
    class="text-input__label"
  >
    With Change Handler
  </label>
   
  <input
    class="text-input__control"
    label="With Change Handler"
  />
</div>
`;

exports[`Storyshots TextInput with input handler 1`] = `
<div
  class="text-input"
>
  <label
    class="text-input__label"
  >
    With Input Handler
  </label>
   
  <input
    class="text-input__control"
    label="With Input Handler"
  />
</div>
`;
